2007-01-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/nnshimbun.el (nnshimbun-index-range): Changed its
	default value to 2 from nil.

2007-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-modeline-title): Don't use w3m-force-window-update
	which obstructs viewing of large images.  Reported by Chris Moore
	<dooglus@gmail.com>.

2007-01-06  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-fau.el (shimbun-fau-x-face-alist): Quote bracket in
	column one.
	(shimbun-fau-content-end): Relaxed.

2007-01-05  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-the-register.el (shimbun-make-contents): Improve junk
	filtering.
	(shimbun-the-register-content-end): Fixed.

	* shimbun/sb-weeklyworldnews.el: Complete rewrite to follow the
	site changes.

2006-12-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-rules): Add rule for the site of Google.
	(w3m-filter-google-use-utf8): New user option.
	(w3m-filter-google-use-ruled-line): Ditto.
	(w3m-filter-google): New function.

2006-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-content-start)
	(shimbun-yahoo-content-end): Follow site change.

2006-12-14  Hiroaki Irokawa  <irorin@terra.dti.ne.jp>

	* shimbun/sb-vinelinux.el (shimbun-vinelinux-group-path-alist):
	Add errata.4x.i386 and errata.4x.ppc groups.

2006-12-13  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* shimbun/sb-zeit-de.el: Adapt to markup and group changes.

2006-12-13  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Fix amazon entry.

2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_EXAMINE_PACKAGEDIR): Check for
	(early|late|last)-package-hierarchies as well as
	(early|late|last)-packages; prefer them to configure-package-path.

2006-12-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el: Changes to create a new session after submitting
	form.
	(w3m-form-new-session): New variable.